# halfspace

./: '  .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  justfile  omg.half  rust-toolchain.toml
.cargo/: config.toml
examples/: cabin.half  hsl.half  perlin.half  smooth_min.half  spinner.half  sponge.half  utopian.half
shaders/: bitfield.wgsl  blit.wgsl  clear.wgsl  heightmap.wgsl  image.wgsl  sdf.wgsl  shaded.wgsl  vert.wgsl
src/: draw.rs  export.rs  gui.rs  lib.rs  main.rs  native.rs  render.rs  shapes.rs  undo.rs  view.rs  web.rs  world.rs
src/painters/: bitfield.rs  bitmap.rs  blit.rs  clear.rs  debug.rs  heightmap.rs  mod.rs  sdf.rs  shaded.rs
src/platform/: mod.rs  native.rs  web.rs
src/state/: mod.rs  undo.rs  v1.rs  v2.rs
src/world/: mod.rs  scene.rs  shapes.rs
syntax/: README.md
web/: htaccess  index.html
