[package]
name = "halfspace"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/mkeeter/halfspace"
description = "An experimental CAD tool"
authors = ["Matt Keeter <matt.j.keeter@gmail.com"]
readme = "README.md"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[dependencies]
bincode = { version = "2", features = ["serde"] }
bitflags = "2.9.1"
clap = "4.5.39"
eframe = { version = "0.31.1", default-features = false, features = ["wgpu", "accesskit", "wayland", "web_screen_reader", "x11"] }
egui = "0.31.1"
egui-wgpu = { version = "0.31.1", features = ["fragile-send-sync-non-atomic-wasm"] }
egui_dnd = "0.12.0"
egui_dock = { version = "0.16.0", features = ["serde"] }
egui_extras = { git = "https://github.com/mkeeter/egui", features = ["syntect"], branch = "custom-syntect-settings-0.31.1-backport" }
env_logger = "0.11.8"
facet = "0.27.12"
fidget = { git = "https://github.com/mkeeter/fidget" }
heck = "0.5"
log = "0.4.27"
nalgebra = "0.33.2"
pollster = "0.4.0"
rayon = "1.10.0"
rhai = { version = "1.21", features = ["sync", "internals"] }
serde = "1"
strum = { version = "0.27.1", features = ["derive"] }
syntect = "5.2.0"
thiserror = "2.0.12"
zerocopy = { version = "0.8.25", features = ["derive"] }

[build-dependencies]
bincode = { version = "2", features = ["serde"] }
syntect = "5.2.0"

[features]
deadlock_detection = ["egui/deadlock_detection"]
jit = ["fidget/jit"]
default = ["jit"]

[patch.crates-io]
egui = { git = "https://github.com/mkeeter/egui", branch = "custom-syntect-settings-0.31.1-backport" }
epaint = { git = "https://github.com/mkeeter/egui", branch = "custom-syntect-settings-0.31.1-backport" }
